Project weather_station {
  database_type: 'PostgreSQL'
  Note: 'Sistem Stasiun Cuaca - skema FINAL (docs/database.md). Termasuk TimescaleDB hypertable conversion (migrasi 000013, 000014).'
}

Table users {
  id           uuid          [pk, default: 'gen_random_uuid()']
  name         varchar(255)
  email        varchar(255)  [unique]
  password_hash text
  created_at   timestamptz   [default: 'now()']
  updated_at   timestamptz   [default: 'now()']
  deleted_at   timestamptz   [null]
}

Table locations {
  id           uuid          [pk, default: 'gen_random_uuid()']
  name         varchar(255)
  latitude     decimal(9,6)  [note: 'CHECK -90..90']
  longitude    decimal(9,6)  [note: 'CHECK -180..180']
  altitude     decimal(10,2) [null]
  created_at   timestamptz   [default: 'now()']
  updated_at   timestamptz   [default: 'now()']
}

Table sensor_types {
  id           uuid          [pk, default: 'gen_random_uuid()']
  code         varchar(50)   [unique, note: 'temp_air, humidity, pressure, wind_speed, wind_dir, rain_counter, solar_rad']
  name         varchar(255)
  unit         varchar(50)
  valid_min    decimal(20,6) [null]
  valid_max    decimal(20,6) [null]
  precision    decimal(20,6) [null]
  created_at   timestamptz   [default: 'now()']
  updated_at   timestamptz   [default: 'now()']
  indexes {
    (code)
  }
}

Table devices {
  id             uuid          [pk, default: 'gen_random_uuid()']
  device_code    varchar(100)  [unique]
  name           varchar(255)
  location_id    uuid          [ref: > locations.id, note: 'FK']
  status         varchar(30)   [note: 'CHECK provisioned|active|maintenance|decommissioned']
  firmware_version varchar(50) [null]
  last_seen_at   timestamptz   [null]
  last_device_time timestamptz [null]
  created_at     timestamptz   [default: 'now()']
  updated_at     timestamptz   [default: 'now()']
  deleted_at     timestamptz   [null]

  indexes {
    (location_id)
    (status)
    (last_seen_at)
    (status, last_seen_at)
  }
}

Table device_credentials {
  id           uuid          [pk, default: 'gen_random_uuid()']
  device_id    uuid          [ref: > devices.id, note: 'FK']
  api_key      varchar(255)  [unique]
  secret_hash  text
  created_at   timestamptz   [default: 'now()']
  last_used_at timestamptz   [null]
  revoked_at   timestamptz   [null]

  indexes {
    (device_id)
    (device_id, revoked_at)
  }
}

Table device_status_history {
  id           uuid          [pk, default: 'gen_random_uuid()']
  device_id    uuid          [ref: > devices.id, note: 'FK']
  from_status  varchar(30)   [null, note: 'NULL utk baris pertama']
  to_status    varchar(30)
  reason       text          [null]
  changed_by   uuid          [ref: > users.id, null, note: 'FK']
  created_at   timestamptz   [default: 'now()']

  indexes {
    (device_id)
    (device_id, created_at)
    (changed_by)
  }
}

Table sensors {
  id              uuid          [pk, default: 'gen_random_uuid()']
  serial_number   varchar(100)  [unique]
  sensor_type_id  uuid          [ref: > sensor_types.id, note: 'FK']
  manufacturer    varchar(255)  [null]
  model           varchar(255)  [null]
  status          varchar(30)   [note: 'CHECK active|inactive|maintenance|retired']
  created_at      timestamptz   [default: 'now()']
  updated_at      timestamptz   [default: 'now()']
  deleted_at      timestamptz   [null]

  indexes {
    (sensor_type_id)
  }
}

Table sensor_installations {
  id           uuid          [pk, default: 'gen_random_uuid()']
  sensor_id    uuid          [ref: > sensors.id, note: 'FK']
  device_id    uuid          [ref: > devices.id, note: 'FK']
  installed_at timestamptz
  removed_at   timestamptz   [null, note: 'NULL = masih aktif']
  created_at   timestamptz   [default: 'now()']

  indexes {
    (sensor_id, installed_at)
    (device_id, installed_at)
    (sensor_id) [unique, name: 'uq_one_active', note: 'partial WHERE removed_at IS NULL']
  }
}

Table sensor_calibrations {
  id             uuid          [pk, default: 'gen_random_uuid()']
  sensor_id      uuid          [ref: > sensors.id, note: 'FK']
  offset         decimal       [default: '0']
  scale          decimal       [default: '1']
  effective_from timestamptz
  effective_to   timestamptz   [null]
  created_at     timestamptz   [default: 'now()']

  indexes {
    (sensor_id, effective_from)
  }
}

// ============================================================
// TIME-SERIES TABLES (TimescaleDB Hypertables)
// ============================================================

Table sensor_readings {
  id              bigint        [pk, note: 'IDENTITY, PK komposit (id, device_time) untuk hypertable']
  device_id       uuid          [ref: > devices.id, note: 'FK']
  sensor_id       uuid          [ref: > sensors.id, note: 'FK']
  device_time     timestamptz   [note: 'Kolom partisi hypertable (chunk_interval 7 hari)']
  server_time     timestamptz
  seq             bigint
  raw_value       decimal
  corrected_value decimal       [null]
  quality_flag    varchar(50)   [note: 'CHECK: GOOD|OUT_OF_RANGE|SENSOR_ERROR|CLOCK_DRIFT|LATE|INVALID|DUPLICATE|RAIN_INITIAL|RAIN_RESET']
  reading_key     varchar(255)  [note: 'Deterministik, diisi oleh trigger BEFORE INSERT/UPDATE']
  created_at      timestamptz   [default: 'now()']

  indexes {
    (sensor_id, device_time) [name: 'idx_readings_sensor_time', note: 'DESC - query agregasi per sensor']
    (device_id, device_time) [name: 'idx_readings_device_time', note: 'DESC - history per device']
    (reading_key, device_time) [unique, note: 'Unique komposit untuk ON CONFLICT DO NOTHING (idempotensi)']
  }
}

Table reading_aggregates {
  id            bigint        [pk, note: 'PK komposit (id, bucket_start) untuk hypertable']
  sensor_id     uuid          [ref: > sensors.id, note: 'FK']
  bucket_start  timestamptz   [note: 'Kolom partisi hypertable (chunk_interval 1 hari)']
  interval      varchar(10)   [note: 'CHECK: 1m|1h|1d']
  min_value     decimal       [null]
  max_value     decimal       [null]
  avg_value     decimal       [null]
  sum_value     decimal       [null]
  sample_count  int           [note: 'CHECK >= 0']
  quality_count int           [note: 'CHECK >= 0']
  created_at    timestamptz   [default: 'now()']

  indexes {
    (sensor_id, interval, bucket_start) [unique, note: 'Unique untuk UPSERT idempoten']
    (sensor_id, interval, bucket_start) [name: 'idx_aggregates_desc', note: 'DESC - query anti-mundur']
  }
}

Table device_health {
  device_id        uuid          [pk, ref: > devices.id, note: 'FK 1:1']
  battery_voltage  decimal       [null]
  rssi             decimal       [null]
  firmware_version varchar(50)   [null]
  last_heartbeat_at timestamptz  [null]
  uptime_seconds   bigint        [null]
  last_seq         bigint        [null]
  updated_at       timestamptz   [default: 'now()']
}

// ============================================================
// RELATIONS (Refs)
// ============================================================
// Device <-> Location: 1 device belongs to 1 location
// Device -> DeviceStatusHistory: 1 device has many status history
// Device -> DeviceCredential: 1 device has many credentials
// Device -> DeviceHealth: 1 device has 1 health (1:1)
// Device <-> Sensor: N:M via SensorInstallation (dengan periode installed_at/removed_at)
// Sensor -> SensorType: 1 sensor belongs to 1 sensor_type
// Sensor -> SensorCalibration: 1 sensor has many calibrations (periode effective_from/to)
// SensorInstallation -> Device: 1 installation belongs to 1 device
// SensorInstallation -> Sensor: 1 installation belongs to 1 sensor
// SensorReading -> Device: 1 reading belongs to 1 device
// SensorReading -> Sensor: 1 reading belongs to 1 sensor
// ReadingAggregate -> Sensor: 1 aggregate belongs to 1 sensor
// DeviceStatusHistory -> User: 1 status change optionally by 1 user

// ============================================================
// NOTES
// ============================================================
// - sensor_readings: TimescaleDB hypertable pada device_time, chunk 7 hari.
//   reading_key = device_id | epoch_micros(device_time) | sensor_id | seq
//   Auto-generated oleh trigger trg_sensor_readings_reading_key (BEFORE INSERT/UPDATE).
//   Unique (reading_key, device_time) + ON CONFLICT DO NOTHING = idempoten.
// - reading_aggregates: TimescaleDB hypertable pada bucket_start, chunk 1 hari.
//   UPSERT via unique (sensor_id, interval, bucket_start).
// - sensor_installations: Partial unique index (sensor_id WHERE removed_at IS NULL)
//   memastikan 1 sensor hanya punya 1 instalasi aktif.
// - Calibrasi berlaku per periode: corrected = raw * scale + offset
// - Device lifecycle: provisioned -> active -> (maintenance <-> active) -> decommissioned
//   (dijamin oleh CHECK constraint + device_status_history trigger)